# msnextdraw

./: LICENSE  README.md  pyproject.toml  sol11.js  sol11.py
example/nextdraw/: connect_error.py  estimate_time.py  interactive_draw_path.py  interactive_penheights.py  interactive_xy.py  low_level_usb.py  plot.py  plot_inline.py  report_pos_inch.py  report_pos_mm.py  toggle.py  turtle_pos.py
example/nextdraw/config/: config_example.py
examples_py_nextdraw/: estimate_time.py  interactive_penheights.py  low_level_usb.py
src/msnextdraw/: sol11.py  tree.py
