[project]
name = "msnextdraw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nextdraw-api",
    "py5>=0.10.7a0",
    "svgwrite>=1.4.3",
    "vpype>=1.15.0",
    "vsketch>=1.2.0",
]

[tool.uv.sources]
nextdraw-api = { url = "https://software-download.bantamtools.com/nd/api/nextdraw_api.zip" }
